# kafka-golang-in-practice

./: README.md  docker-compose.yml
ai-producer/: go.mod  main.go
dataspire_agent/: README.md  pyproject.toml  requirements.txt
dataspire_agent/dsr_agent/: dsr_agent_pb2.py  dsr_agent_pb2.pyi  dsr_agent_pb2_grpc.py  grpc_agent.py  helloworld_pb2.py  http_agent.py  logger.py  message_package.py
dataspire_agent/dsr_agent/http/: agent.py
dataspire_agent/dsr_agent/protos/: dsr_agent.proto  helloworld.proto
python-application/: getting_started.ini
service-data-metadata/: configs.ini  requirements.txt
service-data-metadata/src/: main.py
service-data-metadata/src/image_processor/: thumnail.py
service-producer/: go.mod  main.go
webhook-sumilator/: go.mod  go.sum  main.go  readme.md
webhook-sumilator/dsr_agent/: dsr_agent.pb.go  dsr_agent.proto  dsr_agent_grpc.pb.go
webhook-sumilator/helloworld/: helloworld.pb.go  helloworld_grpc.pb.go
