[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsr_agent"
version = "0.0.2"
authors = [
  { name="An Quach", email="anquach.dev@gmail.com" },
]
description = "A agent helper support DataSpire Ai Model"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"